@@ -4,6 +4,7 @@
 v0.12 (β) - 2016-xx-xx
 ======================
 - Archive: View past days details (#61).
+- Check whether gas readings are optional (#34).
 -
 
 
